<resources>
    <string name="app_name">IFCommunity</string>

    <!--Error-->
    <string name="generic_no_connection_message">Verifique sua conexão com a internet e tente novamente!</string>
    <string name="generic_server_error">Não foi possível se conectar ao servidor.</string>
    <string name="generic_worng_user_password">Usuário e/ou senha incorreto!</string>
    <string name="generic_unkown_error">Erro desconhecido!</string>
    <string name="generic_log_error">Erro de servidor: </string>
    <string name="generic_erro_title">Erro!</string>
    <string name="generic_sorry_title">Desculpe</string>
    <string name="generic_required_field">Campo obrigatório</string>
    <string name="generic_invalid_email">Email inválido</string>
    <string name="generic_invalid_matter">Requisição de matéria inválida</string>
    <string name="generic_invalid_login">Login inválido</string>
    <string name="generic_invalid_password">Senha inválida</string>
    <string name="generic_not_implemented">Funcionalidade ainda não implementada!</string>

    <!--Login-->
    <string name="login_ifcommunity_title_textview">IFCommunity</string>
    <string name="login_welcome_back_textview">Bem-vindo de volta</string>
    <string name="login_signup_textview">Faça o login para continuar</string>
    <string name="login_login_edittext">Usuário</string>
    <string name="login_password_edittext">Senha</string>
    <string name="login_forgot_passsword_button">Esqueceu sua senha?</string>
    <string name="login_remember_textview">Lembrar de mim</string>
    <string name="login_login_button">Login</string>

    <!--Forgot Password-->
    <string name="forgot_password_background_description_imageview">Forgot Password Background Gradient</string>
    <string name="forgot_password_description_textview">Esqueceu sua senha?</string>
    <string name="forgot_password_title_description_textview">Sem problemas, nós resolvemos isso para você! Nos informe seu e-mail que iremos mandar as instruções para fazer o reset dela.</string>
    <string name="forgot_password_send_button">Enviar</string>
    <string name="forgot_password_mail_input_layout">E-mail</string>
    <string name="login_background_description_imageview">Login Background Gradient</string>

    <!--Welcome-->
    <string name="welcome_background_imageview">Welcome Background Gradient</string>
    <string name="welcome_ifcommunity_title_textview">IFCommunity</string>
    <string name="welcome_title_description_textview">Compartilhe conhecimento na comunidade IF</string>
    <string name="welcome_description_textview">Plataforma desenvolvida para compartilhar conhecimentos de todas as discilpinas</string>
    <string name="welcome_login_button">Login</string>
    <string name="welcome_register_button">Criar uma conta</string>

    <!--Register-->
    <string name="register_periodo">Período:</string>
    <string name="register_matricula">Matricula:</string>
    <string name="register_cellphone">Celular:</string>
    <string name="register_full_name">Nome Completo:</string>
    <string name="register_description">Conte-nos um pouco sobre você</string>

    <!--Register2-->
    <string name="register2_password">Senha:</string>
    <string name="register2_user">Usuário:</string>
    <string name="register2_email">Email:</string>
    <string name="register2_description">Conte-nos um pouco mais</string>


</resources>
