<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WelcomeActivity">

    <ImageView
        android:id="@+id/welcome_background_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/welcome_background_imageview"
        android:scaleType="fitCenter"
        android:src="@drawable/background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_ifcommunity_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/welcome_ifcommunity_title_textview"
        android:textAllCaps="true"
        android:textColor="@color/themeColor"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/welcome_title_description_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/montserrat"
        android:gravity="left"
        android:text="@string/welcome_title_description_textview"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcome_description_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded,UnusedAttribute" />

    <TextView
        android:id="@+id/welcome_description_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:fontFamily="@font/montserrat"
        android:gravity="left"
        android:text="@string/welcome_description_textview"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_login_button"
        app:layout_constraintEnd_toEndOf="@id/welcome_title_description_textview"
        app:layout_constraintStart_toStartOf="@id/welcome_title_description_textview"
        tools:ignore="RtlHardcoded,UnusedAttribute" />

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/style_button_login"
        android:fontFamily="@font/open_sans"
        android:text="@string/welcome_login_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:fontFamily="@font/open_sans_light"
        app:layout_constraintBottom_toTopOf="@id/welcome_register_button"
        app:layout_constraintEnd_toEndOf="@+id/welcome_register_button"
        app:layout_constraintStart_toStartOf="@+id/welcome_register_button"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/welcome_register_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/welcome_register_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

</android.support.constraint.ConstraintLayout>