<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/register_background_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/login_background_description_imageview"
        android:scaleType="fitCenter"
        android:src="@drawable/background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register_back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_ifcommunity_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/register_description"
        android:textColor="@color/themeColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/register_nome_completo_edittext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/register_full_name"
        app:layout_constraintBottom_toBottomOf="@+id/register_background_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_ifcommunity_title_textview"
        app:layout_constraintVertical_bias="0.091" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/register_celular_edittext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/register_cellphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_nome_completo_edittext"
        app:layout_constraintVertical_bias="0.091" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/register_matricula_edittext"
        android:layout_width="249dp"
        android:layout_height="55dp"
        android:hint="@string/register_matricula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/register_celular_edittext"
        app:layout_constraintTop_toBottomOf="@+id/register_celular_edittext"
        app:layout_constraintVertical_bias="0.083" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/register_periodo_edittext"
        android:layout_width="100sp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/register_periodo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_celular_edittext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_matricula_edittext"
        app:layout_constraintTop_toBottomOf="@+id/register_celular_edittext"
        app:layout_constraintVertical_bias="0.047" />





</android.support.constraint.ConstraintLayout>
