<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/register_background_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/login_background_description_imageview"
        android:scaleType="fitCenter"
        android:src="@drawable/background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register2_back_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register2_ifcommunity_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/register2_description"
        android:textColor="@color/themeColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register2_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/register2_email"
        app:layout_constraintBottom_toBottomOf="@+id/register_background_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register2_ifcommunity_title_textview"
        app:layout_constraintVertical_bias="0.091" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register2_user_edittext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/register2_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register2_email_edittext"
        app:layout_constraintVertical_bias="0.049" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/register2_password_edittext"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:hint="@string/register2_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/register2_user_edittext"
        app:layout_constraintTop_toBottomOf="@+id/register2_user_edittext"
        app:layout_constraintVertical_bias="0.083" />









</androidx.constraintlayout.widget.ConstraintLayout>
